# one_button_rotation_auto_trigger

./: .gitignore  README.md  main.py  pyproject.toml  wowhead_spell_scraper.py
core/: input_sender.py  matcher.py  profile_manager.py  scanner.py
ui/: main_window.py  region_selector.py  spell_mapping_dialog.py
